@@ -1,3 +1,4 @@
+2323 [OneClick] set "Force using Key-Frames for chapters marks" even if "Don't encode video" is checked
 2322 [OneClick] fixed a problem when aborting during automatic deinterlacing
 2321 [OneClick] fixed a problem with multiple subtitle extraction caused by 2318
 2320 [OneClick] fixed missing subtile tracks if using intermediate MKV files. Bug #710
